[package]
name = "slime_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] } # Async runtime for concurrent tasks
serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing data
rdev = "0.5" # For keyboard/mouse event monitoring
chrono = "0.4" # For date/time handling