[package]
name = "slime_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] } # Async runtime for concurrent tasks
serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing data
rdev = "0.5" # For keyboard/mouse event monitoring
chrono = "0.4" # For date/time handling
mongodb = "2.8" # MongoDB driver for Rust
futures = "0.3" # Helps with async programming
dotenv = "0.15" # For handling environment variables